tests/ui/attributes/crate-type-macro-not-found.stderr
error: cannot find macro `foo` in this scope
  --> $DIR/crate-type-macro-not-found.rs:2:16
   |
LL | #[crate_type = foo!()]
   |                ^^^ consider moving the definition of `foo` before this call
   |
note: a macro with the same name exists, but it appears later
  --> $DIR/crate-type-macro-not-found.rs:6:14
   |
LL | macro_rules! foo {
   |              ^^^

error: attribute value must be a literal
  --> $DIR/crate-type-macro-not-found.rs:2:16
   |
LL | #[crate_type = foo!()]
   |                ^^^^^^

error: aborting due to 2 previous errors

